Co-authored-by: ryleechisholm <ryleechisholm@users.noreply.github.com> Co-authored-by: MariannM22 <MariannM22@users.noreply.github.com>

--- a/app/templates/checkout.html
+++ b/app/templates/checkout.html
@@ -9,7 +9,7 @@
       integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" type="text/css" href="{% static '/css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'style.css' %}" type="text/css" media="all" />
     <title>Check Out</title>
   </head>
   <body>
