--- a/app/templates/food.html
+++ b/app/templates/food.html
@@ -9,10 +9,26 @@
       integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" type="text/css" href="{% static '/css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'style.css' %}" type="text/css" media="all" />
     <title>Food</title>
   </head>
   <body>
-  
+
+    <label>
+      <p >Big Food:</p>
+      <p class="bigitem"> {{form.name}}</p>
+      <p class="bigitem"> {{form.side1}}</p>
+      <p class="bigitem"> {{form.side2}}</p>
+    </label>
+    <button>Enter</button>
+         
+    <label>
+      <p>Small Food:</p>
+      <p class="smallitem"> {{form.name}}</p>
+      <p class="smallitem"> {{form.side}}<p>
+    </label>
+    <button>Enter</button>
+
+
   </body>
 </html>
