--- a/app/static/style.css
+++ b/app/static/style.css
@@ -1,26 +1,45 @@
+* { margin: 0; padding: 0; outline: 0; }
+
 body {
     font-size: 12px;
     line-height: 1.3;
     font-family: arial, sans-serif;
-    color: #000;
+    color: white;
+    background-color: #000;
     min-width: 1023px;
 }
 
-#logo {
-    padding: 0 0 0 5px;
+html, body { height: 100%; }
 
-}
+a { color: #0252aa; text-decoration: none; cursor: pointer; }
+a:hover { text-decoration: underline; }
+a img { border: 0; }
 
-#logo a{
-    font-size: 0px;
-}
+input, textarea, select { font-size: 12px; font-family: arial, sans-serif; }
+textarea { overflow: auto; }
 
-#slider .left-bottom { 
-    background-position: left bottom; 
-    left: -6px; top: 407px; 
-}
-#slider .right-bottom { 
-    background-position: right bottom; 
-    right: -6px; top: 407px; 
-}
+
+#wrapper { min-height: 100%; height: auto !important; height: 100%; margin: 0 auto -45px; }
+
+#header { width: 100%; font-family: 'Trebuchet MS', Arial, serif; text-align: center; text-transform: uppercase; padding: 31px 0 45px 0; }
+
+#logo { font-weight: normal; padding: 0 0 0 5px; }
+#logo a { color: #ebebeb; font-size: 41px; line-height: 41px; }
+#logo a span { display: block; font-size: 11px; line-height: 11px; color: #e01e27; padding-top: 4px; }
+#logo a:hover { text-decoration: none; }
+
+#navigation { padding-bottom: 15px; height: 38px; }
+#navigation ul li { float: left; list-style: none; padding: 0 3px 0 0; }
+#navigation ul li a { float: left; height: 38px; padding-left: 27px; }
+#navigation ul li a span { float: left; line-height: 38px; font-family: 'Trebuchet MS', Arial, serif; font-weight: bold; font-size: 16px; color: #fff; text-transform: uppercase; padding-right: 27px; }
+#navigation ul li a.active, 
+#navigation ul li a.hover {text-decoration: none; }
+
+
+.carousel-inner > .item > img,
+    .carousel-inner > .item > a > img {
+      width: 70%;
+      margin: auto;
+    }
+
 
