--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -23,7 +23,7 @@
             <li><a href="#" class="active" title="Home"><span>Home</span></a></li>
             <li><a href="{% url 'food' %}" title="Food"><span>Food</span></a></li>
             <li><a href="{% url 'checkout' %}" title ="Checkout"><span>Checkout</span></a> </li>
-            <li><a href="{% url 'login' %}" title ="Login"><span>Logout</span></a> </li>
+            <li><a href="{% url 'logout' %}" title ="Login"><span>Logout</span></a> </li>
           </ul>
         </nav>
         <hr class="nav-underline">
