Added images for menu

--- a/app/templates/food_mockup.html
+++ b/app/templates/food_mockup.html
@@ -20,7 +20,7 @@
     }
   </style>
   <body onload="populatePage()">
-    <div class="Table">
+    <div id="Table">
     </div>
   </body>
 </html>
