--- a/app/templates/food_mockup.html
+++ b/app/templates/food_mockup.html
@@ -23,7 +23,7 @@
         <a class="Btn" name="small">Small</a>
         <a class="Btn" name="big">Big</a>
         <a class="Btn" name="sides">Sides</a>
-        <a class="Btn" name="salad">Salad</a>
+        <a class="Btn" name="salads">Salad</a>
         <a class="Btn" name="starters">Starters</a>
       </nav>
       <div id="content"></div>
