--- a/app/templates/food.html
+++ b/app/templates/food.html
@@ -3,12 +3,13 @@
 <html>
   <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <link
+    {% comment %} <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
       integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP"
       crossorigin="anonymous"
-    />
+    /> {% endcomment %}
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="{% static 'food-style.css' %}"/>
     <title>Food</title>
   </head>
@@ -26,6 +27,9 @@
           <a class="Btn" name="starters">Starters</a>
         </div>
         <a href="{% url 'checkout' %}" title="Checkout">Checkout</a>
+        <a class="cartbtn">Cart</a>
+        <div id="ticketDisplay">No items in cart
+        </div>
       </nav>
       <div id="content"></div>
 
