--- a/app/static/food-style.css
+++ b/app/static/food-style.css
@@ -1,109 +1,103 @@
 body {
-  background-color: white;
-  color: black;
-  margin: 0;
-  padding: 0;
-}
-
-nav {
-  overflow: hidden;
-  background-color: #333;
-  font-family: Arial, Helvetica, sans-serif;
-  margin: 0;
-  padding: 0;
-}
-
-nav a {
-  float: left;
-  font-size: 16px;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-nav a:hover {
-  background-color: red;
-}
-
-#content {
-  background-color: white;
-  display: grid;
-  grid-template-columns: 25% 25% 25% 25%;
-}
-
-.itemBox {
-  background-color: light gray;
-  margin: 2em;
-  padding: 3em;
-}
-
-/* .itemName {
+    background-color: white;
+    color: black;
   }
   
-  img {
-    width: 25%;
+  nav {
+    overflow: hidden;
+    background-color: #333;
+    font-family: Arial, Helvetica, sans-serif;
   }
+  
+  nav a {
+    float: left;
+    font-size: 16px;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  nav a:hover {
+    background-color: red;
+  }
+  
+  #content {
+    background-color: white;
+    display: grid;
+    grid-template-columns: 25% 25% 25% 25%;
+  }
+  
+  .itemBox {
+    background-color: light gray;
+    margin: 2em;
+    padding: 3em;
+  }
+  
+  .itemName {
+    padding-bottom: 5px;
+  }
+
   
   .itemDesc {
   }
   
   .itemPrice {
-  } */
+  }
+  
 
-img {
-  width: 100%;
-  height: 40%;
-}
 
-.dropdown {
-  float: left;
-  overflow: hidden;
-}
-
-.dropdown .dropbtn {
-  cursor: pointer;
-  font-size: 16px;
-  border: none;
-  outline: none;
-  color: white;
-  padding: 14px 16px;
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0;
-}
-
-.dropdown:hover .dropbtn,
-.dropbtn:focus {
-  background-color: red;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  float: none;
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-.dropdown-content a:hover {
-  background-color: #ddd;
-}
-
-.show {
-  display: block;
-}
-
-.cartbtn {
-  float: right;
-}
+  img {
+    width: 75%;
+    height: auto;
+    object-fit: scale down;
+  }
+  
+  .dropdown {
+    float: left;
+    overflow: hidden;
+  }
+  
+  .dropdown .dropbtn {
+    cursor: pointer;
+    font-size: 16px;
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+  }
+  
+  .dropdown:hover .dropbtn,
+  .dropbtn:focus {
+    background-color: red;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+  }
+  
+  .dropdown-content a:hover {
+    background-color: #ddd;
+  }
+  
+  .show {
+    display: block;
+  }
+  
