--- a/app/templates/checkout.html
+++ b/app/templates/checkout.html
@@ -29,7 +29,7 @@
                 return actions.order.create({
                     purchase_units: [{
                         amount: {
-                            value: '88.44'
+                            value: {{price}}
                         }
                     }]
                 });
