--- a/app/templates/food.html
+++ b/app/templates/food.html
@@ -23,7 +23,7 @@
           <a class="Btn" name="small">Small</a>
           <a class="Btn" name="big">Big</a>
           <a class="Btn" name="sides">Sides</a>
-          <a class="Btn" name="salads">Salad</a>
+          <a class="Btn" name="salads">Salads</a>
           <a class="Btn" name="starters">Starters</a>
         </div>
         <a href="{% url 'checkout' %}" title="Checkout">Checkout</a>
