changed font link

--- a/app/templates/food.html
+++ b/app/templates/food.html
@@ -3,13 +3,12 @@
 <html>
   <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    {% comment %} <link
+    <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
       integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP"
       crossorigin="anonymous"
-    /> {% endcomment %}
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    />
     <link rel="stylesheet" href="{% static 'food-style.css' %}"/>
     <title>Food</title>
   </head>
