--- a/app/static/food-style.css
+++ b/app/static/food-style.css
@@ -1,12 +1,16 @@
 body {
   background-color: white;
   color: black;
+  margin: 0;
+  padding: 0;
 }
 
 nav {
   overflow: hidden;
   background-color: #333;
   font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 nav a {
@@ -99,5 +103,5 @@ img {
 }
 
 .cartbtn {
-  float: left;
+  float: right;
 }
