moved dropdown, fixed word float

--- a/app/static/food-style.css
+++ b/app/static/food-style.css
@@ -88,7 +88,7 @@ img {
 .dropdown-content a {
   float: none;
   color: black;
-  padding: 12px 16px;
+  padding: 12px 26px;
   text-decoration: none;
   display: block;
   text-align: left;
@@ -103,5 +103,9 @@ img {
 }
 
 .cartbtn {
+  float: right;
+}
+
+#ticketDisplay {
   float: right;
 }
