adding to the ticket display, created populate ticket function

--- a/app/static/food-style.css
+++ b/app/static/food-style.css
@@ -102,6 +102,11 @@ img {
   display: block;
 }
 
+/* .mainpage {
+  display: grid;
+  grid-template-columns: 66% 34%;
+} */
+
 .cartbtn {
   float: right;
 }
