--- a/app/templates/food.html
+++ b/app/templates/food.html
@@ -19,9 +19,7 @@
           <i class="fa fa-caret-down"></i>
         </a>
         <a href="{% url 'checkout' %}" title="Checkout">Checkout</a>
-        <a class="cartbtn">Cart</a>
-        <div id="ticketDisplay">No items in cart
-        </div>
+        <a class="cartbtn" onclick="populateTicket()">Cart</a>
       </nav>
       <div class="dropdown-content" id="myDropdown">
         <a class="Btn" name="small">Small</a>
@@ -30,9 +28,13 @@
         <a class="Btn" name="salads">Salads</a>
         <a class="Btn" name="starters">Starters</a>
       </div>
-      <div id="content"></div>
+      <div class="mainpage">
+        <div id="content"></div>
 
-    </div>
+        </div>
+        <div id="ticketDisplay">No items in cart
+        </div>
+      </div>
   </body>
   <script>
     function myFunction() {
