messing with styles to space this proper

--- a/app/static/food-style.css
+++ b/app/static/food-style.css
@@ -102,10 +102,10 @@ img {
   display: block;
 }
 
-/* .mainpage {
+.mainpage {
   display: grid;
   grid-template-columns: 66% 34%;
-} */
+}
 
 .cartbtn {
   float: right;
@@ -113,4 +113,52 @@ img {
 
 #ticketDisplay {
   float: right;
+}
+
+.ticket {
+  background-color: yellow;
+}
+
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+
+.dropdown .dropbtn {
+  cursor: pointer;
+  font-size: 16px;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.dropdown:hover .dropbtn,
+.dropbtn:focus {
+  background-color: red;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 26px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
 }
