--- a/app/templates/food.html
+++ b/app/templates/food.html
@@ -19,7 +19,7 @@
           <i class="fa fa-caret-down"></i>
         </a>
         <a href="{% url 'checkout' %}" title="Checkout">Checkout</a>
-        <a class="cartbtn" onclick="populateTicket()">Cart</a>
+        <a class="cartbtn" onclick="ticketToggle()">Cart</a>
       </nav>
       <div class="dropdown-content" id="myDropdown">
         <a class="Btn" name="small">Small</a>
@@ -32,7 +32,7 @@
         <div id="content"></div>
 
         </div>
-        <div id="ticketDisplay">No items in cart
+        <div class="ticket-content" id="ticketDisplay">No items in cart
         </div>
       </div>
   </body>
@@ -46,6 +46,19 @@
         var myDropdown = document.getElementById("myDropdown");
         if (myDropdown.classList.contains("show")) {
           myDropdown.classList.remove("show");
+        }
+      }
+    };
+    
+    function ticketToggle() {
+      document.getElementById("ticketDisplay").classList.toggle("show");
+    }
+
+    window.onclick = function (e) {
+      if (!e.target.matches(".cartbtn")) {
+        var ticketDisplay = document.getElementById("ticketDisplay");
+        if (ticketDisplay.classList.contains("show")) {
+          ticketDisplay.classList.remove("show");
         }
       }
     };
