--- a/app/templates/checkout.html
+++ b/app/templates/checkout.html
@@ -1,19 +1,21 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <!-- Add meta tags for mobile and IE -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title> PayPal Checkout Integration | Client Demo </title>
-    <link rel="stylesheet" href="{% static 'style.css' %}"/>
-</head>
+    <title>PayPal Checkout Integration | Client Demo</title>
+    <link rel="stylesheet" href="{% static 'style.css' %}" />
+  </head>
 
-<body>
+  <body>
     <nav id="navigation">
-        <a href="{% url 'home' %}" title="Home">Home</a>
+      <a href="{% url 'home' %}" title="Home">Home</a>
     </nav>
+    <div class="totalBox">
+      <h1>$</h1>
+    </div>
     <!-- Set up a container element for the button -->
     <div id="paypal-button-container"></div>
 
@@ -21,39 +23,38 @@
     <script src="https://www.paypal.com/sdk/js?client-id=test&currency=USD"></script>
 
     <script>
-        // Render the PayPal button into #paypal-button-container
-        paypal.Buttons({
+      // Render the PayPal button into #paypal-button-container
+      paypal.Buttons({
 
-            // Set up the transaction
-            createOrder: function(data, actions) {
-                return actions.order.create({
-                    purchase_units: [{
-                        amount: {
-                            value: {{price}}
-                        }
-                    }]
-                });
-            },
+          // Set up the transaction
+          createOrder: function(data, actions) {
+              return actions.order.create({
+                  purchase_units: [{
+                      amount: {
+                          value: {{price}}
+                      }
+                  }]
+              });
+          },
 
-            // Finalize the transaction
-            onApprove: function(data, actions) {
-                return actions.order.capture().then(function(orderData) {
-                    // Successful capture! For demo purposes:
-                    console.log('Capture result', orderData, JSON.stringify(orderData, null, 2));
-                    var transaction = orderData.purchase_units[0].payments.captures[0];
-                    alert('Transaction '+ transaction.status + ': ' + transaction.id + '\n\nSee console for all available details');
+          // Finalize the transaction
+          onApprove: function(data, actions) {
+              return actions.order.capture().then(function(orderData) {
+                  // Successful capture! For demo purposes:
+                  console.log('Capture result', orderData, JSON.stringify(orderData, null, 2));
+                  var transaction = orderData.purchase_units[0].payments.captures[0];
+                  alert('Transaction '+ transaction.status + ': ' + transaction.id + '\n\nSee console for all available details');
 
-                    // Replace the above to show a success message within this page, e.g.
-                    // const element = document.getElementById('paypal-button-container');
-                    // element.innerHTML = '';
-                    // element.innerHTML = '<h3>Thank you for your payment!</h3>';
-                    // Or go to another URL:  actions.redirect('thank_you.html');
-                });
-            }
+                  // Replace the above to show a success message within this page, e.g.
+                  // const element = document.getElementById('paypal-button-container');
+                  // element.innerHTML = '';
+                  // element.innerHTML = '<h3>Thank you for your payment!</h3>';
+                  // Or go to another URL:  actions.redirect('thank_you.html');
+              });
+          }
 
 
-        }).render('#paypal-button-container');
+      }).render('#paypal-button-container');
     </script>
-</body>
-
+  </body>
 </html>
