--- a/app/templates/food.html
+++ b/app/templates/food.html
@@ -30,9 +30,7 @@
       <a class="Btn" name="starters">Starters</a>
     </div>
     <div id="checkoutBox">
-      <div class="totalBox">
-        <h1>$</h1>
-      </div>
+      <div id="totalBox"></div>
       <div id="paypal-button-container"></div>
 
       <!-- Include the PayPal JavaScript SDK -->
@@ -40,10 +38,10 @@
     </div>
     <div class="mainpage">
       <div id="content"></div>
-      <div class="ticketSide show">
+      <div id="ticketSide">
         <div class="ticket-content" id="ticketDisplay"></div>
         <div class="sticky2">
-          <h2 class="total">Total: $0.00</h2>
+          <h2 id="total">Total: $0.00</h2>
           <div class="placeBtn"></div>
         </div>
       </div>
@@ -101,11 +99,15 @@
 
     function openCheckout() {
       document.getElementById("checkoutBox").classList.toggle("show");
+      total = document.getElementById("total").innerHTMl;
+      console.log(total);
+      document.getElementById("totalBox").innerHTML = total;
       document.querySelector(".mainpage").classList.toggle("hide");
     }
 
     function ticketToggle() {
       document.getElementById("ticketSide").classList.toggle("show");
+      document.querySelector(".mainpage").classList.toggle("grid");
     }
   </script>
   <script src="{% static 'script.js' %}"></script>
