--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,13 +9,14 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="{% static 'style.css' %}"/>
+  <script src="{% static 'script.js' %}"></script>
   </head>
   <body>
     <div id="wrapper">
       <div class="shell">
   
         <div id="header">
-          <h1 id="logo"><a href="#" title="">CornerStore<span>Susan</span></a></h1>
+          <h1 id="logo"><a href="#" title="">CornerStore<span>Susan Coley</span></a></h1>
         </div>
   
         <nav id="navigation">
@@ -115,7 +116,37 @@
         });
       });
       </script>
-    
+
+      <div id="main">
+        <div class="items">
+          <div class="large-col">
+            <h2>Who We Are?</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras id molestie enim. Suspendisse consequat urna non ante gravida euismod. In in nibh nulla. Vestibulum at tellus viverra nulla aliquam pulvinar. Maecenas nulla arcu, venenatis et ultrices id, tincidunt ut nisl. Etiam augue lectus,Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras id molestie enim. Suspendisse consequat urna non ante gravida euismod. In in nibh nulla. Stibulum at tellus viverra nulla aliquam pulvinar. Maecenas nulla arcu, venenatis et ultrices id, tincidunt ut nisl. Maecenas nulla arcu, venenatis et ultrices id, tincidunt ut nisl. Etiam augue lectus,Lorem ipsum dolor</p>
+          </div>
+          <div class="large-col last">
+            <h2>Today's Special</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras id molestie enim. Suspendisse consequat urna non ante gravida euismod. In in nibh nulla. Vestibulum at tellus viverra nulla aliquam pulvinar.</p>
+            
+            <p class="a-link"><a href="#" class="btn-red" title="Order"><span>Order</span></a></p>					
+          </div>
+          <div class="cl">&nbsp;</div>
+        </div>
+        <div class="items">
+          <div class="small-col">
+            <h3>Danny says</h3>
+            <p>"Great place to eat, great food, great prices and super friendly service. We love the Coleys."</p>
+          </div>
+          <div class="small-col">
+            <h3>Rodney says</h3>
+            <p>"Best frog legs I've had in a while. I will be back!"</p>
+          </div>
+          <div class="small-col last">
+            <h3>Matt-Kat says</h3>
+            <p>"Good food and freshly made on every order."</p>
+          </div>
+          <div class="cl">&nbsp;</div>
+        </div>
+      </div>
 
 
 
