--- a/app/static/food-style.css
+++ b/app/static/food-style.css
@@ -83,7 +83,12 @@ nav a:hover {
 }
 
 /* Menu Display */
-#content {
+.full-width {
+  width: 100%;
+  height: 60px;
+}
+
+.items {
   background-color: white;
   display: grid;
   grid-template-columns: 25% 25% 25% 25%;
@@ -107,6 +112,10 @@ img {
 }
 
 /* Cart Display */
+#total {
+  display: none;
+}
+
 .ticket-content {
   z-index: 1;
   float: left;
