--- a/app/templates/food.html
+++ b/app/templates/food.html
@@ -37,7 +37,8 @@
       <script src="https://www.paypal.com/sdk/js?client-id=test&currency=USD"></script>
     </div>
     <div class="mainpage">
-      <div id="content"></div>
+      <div id="content">
+      </div>
       <div id="ticketSide">
         <div class="ticket-content" id="ticketDisplay"></div>
         <div class="sticky2">
@@ -55,7 +56,9 @@
               purchase_units: [
                 {
                   amount: {
-                    value: price,
+                    value: document
+                      .getElementById("total")
+                      .innerHTML.substring(1),
                   },
                 },
               ],
@@ -99,15 +102,16 @@
 
     function openCheckout() {
       document.getElementById("checkoutBox").classList.toggle("show");
-      total = document.getElementById("total").innerHTMl;
-      console.log(total);
-      document.getElementById("totalBox").innerHTML = total;
+      total = document.getElementById("total");
+      document.getElementById("totalBox").innerHTML =
+        "$" + total.innerHTML.substring(1);
       document.querySelector(".mainpage").classList.toggle("hide");
     }
 
     function ticketToggle() {
       document.getElementById("ticketSide").classList.toggle("show");
       document.querySelector(".mainpage").classList.toggle("grid");
+      document.getElementById("total").classList.toggle("show");
     }
   </script>
   <script src="{% static 'script.js' %}"></script>
